# krlib

./: .clang-format  .gitignore  .gitlab-ci.yml  .vimrc.local  CMakeLists.txt  README.md  readme.md
doc/: directoryStructure.md
source/: CMakeLists.txt
source/kr/: JsonReader.h  JsonWritter.h  base64.h  canaryobject.h  explicit.h  fixedString.h  flatimap.h  indexvector.h  inlineRing.h  inlineVec.h  krstring.h  logger.h  multistopwatch.h  optional.h  paddedVector.h  result.h  shared_ptr_st.h  stopwatch.h  string.h  timer.h
source/kr/util/: base64.h
source/unittest/: CMakeLists.txt  base64.cpp  explicit.cpp  fixedString.cpp  flatimap.cpp  indexvector.cpp  inlineRing.cpp  inlineVec.cpp  jsonReader.cpp  jsonwritter.cpp  krstring.cpp  optional.cpp  paddedVector.cpp  result.cpp  shared_ptr_st.cpp  stopwatch.cpp  timer.cpp
test/: CMakeLists.txt
